<resources>
    <string name="app_name">PetMateV2</string>
    <string name="welcome">welcome</string>
    <string name="big_frame">big_frame</string>
    <string name="pet_mate_header">pet_mate_header</string>
    <string name="my_pet_profile">my_pet_profile</string>
    <string name="med_frame">med_frame</string>
    <string name="slogan">slogan</string>
    <string name="pets">Pets</string>
    <string name="name">Your pets name...</string>
    <string name="type">type</string>
    <string name="gender">gender</string>
    <string name="looking_for">lookingfor</string>
    <string name="purpose">purpose</string>
    <string name="area">area</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="test">test</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_legal_password">Must contain character and digits combined</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_format">input format error</string>
    <string name="error_matched_passwords">passwords do not match</string>
    <string name="error_invalid_length">phone format example 053-123-1234</string>
    <string name="startusing">startusing</string>
    <string name="users">Users</string>
    <string name="preference_file_key">com.guy.petmatev2.2018</string>
    <string name="prev_activity">prevActivity</string>
    <string name="my_pets_activity">MyPetsActivity</string>
    <string name="pet_profile_activity">PetProfileActivity</string>
    <string name="likes">Likes</string>


    <string name="is_edit">isEdit</string>

</resources>
